--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -7,19 +7,6 @@ on:
       - "v*"
   pull_request:
     branches: ["main"]
-  workflow_dispatch:
-    inputs:
-      app_name:
-        description: "Application name"
-        required: true
-        default: "MyPyQtApp"
-      python_version:
-        description: "Python version"
-        required: true
-        default: "3.11"
-
-env:
-  APP_NAME: RoseOfWind
 
 jobs:
   build:
@@ -29,13 +16,10 @@ jobs:
         os: [ubuntu-latest, windows-latest, macos-latest]
         python-version: [3.11]
 
-    env:
-      APP_NAME: ${{ github.event.inputs.app_name || env.APP_NAME }}
-
     steps:
       - uses: actions/checkout@v4
 
-      - name: Set up Python ${{ matrix.python-version }}
+      - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
@@ -47,45 +31,35 @@ jobs:
 
       - name: Build with PyInstaller
         run: |
-          pyinstaller \
-            --onefile \
-            --windowed \
-            --name "${{ env.APP_NAME }}" \
-            --distpath ./dist \
-            --workpath ./build \
-            main.py
+          pyinstaller --onefile --windowed --name RoseOfWind main.py
 
-      - name: Determine output filename and rename
-        id: filenames
+      - name: Rename output file
         shell: bash
         run: |
-          APP_NAME="${{ env.APP_NAME }}"
           if [ "$RUNNER_OS" == "Linux" ]; then
-            OUTPUT_FILE="$APP_NAME"
-            TARGET_FILE="$APP_NAME-linux-x64"
+            mv dist/RoseOfWind ./RoseOfWind-linux-x64
           elif [ "$RUNNER_OS" == "Windows" ]; then
-            OUTPUT_FILE="$APP_NAME.exe"
-            TARGET_FILE="$APP_NAME-windows-x64.exe"
+            mv dist/RoseOfWind.exe ./RoseOfWind-windows-x64.exe
           elif [ "$RUNNER_OS" == "macOS" ]; then
-            OUTPUT_FILE="$APP_NAME.app"
-            TARGET_FILE="$APP_NAME-macos-x64.app"
+            mv dist/RoseOfWind.app ./RoseOfWind-macos-x64.app
           fi
-          echo "output_file=$OUTPUT_FILE" >> $GITHUB_OUTPUT
-          echo "target_file=$TARGET_FILE" >> $GITHUB_OUTPUT
-          mv "dist/$OUTPUT_FILE" "./$TARGET_FILE"
 
-      - name: Upload build artifact
+      - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
-          name: ${{ env.APP_NAME }}-${{ matrix.os }}
-          path: ${{ steps.filenames.outputs.target_file }}
+          name: RoseOfWind-${{ matrix.os }}
+          path: |
+            RoseOfWind-linux-x64
+            RoseOfWind-windows-x64.exe
+            RoseOfWind-macos-x64.app
 
-      - name: Create Release (only on tags)
+      - name: Create GitHub Release (on tags only)
         if: startsWith(github.ref, 'refs/tags/v')
         uses: softprops/action-gh-release@v2
         with:
-          files: ${{ steps.filenames.outputs.target_file }}
-          draft: false
-          prerelease: false
+          files: |
+            RoseOfWind-linux-x64
+            RoseOfWind-windows-x64.exe
+            RoseOfWind-macos-x64.app
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
