--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,13 +1,15 @@
 name: Build PyQt App
 
-on:
-  push:
-    branches: ["main"]
-    tags:
-      - "v*"
-  pull_request:
-    branches: ["main"]
-  workflow_dispatch:
+on: [push]
+
+# on:
+#   push:
+#     branches: ["main"]
+#     tags:
+#       - "v*"
+#   pull_request:
+#     branches: ["main"]
+#   workflow_dispatch:
 
 jobs:
   build:
