--- a/requirements.txt
+++ b/requirements.txt
@@ -10,8 +10,6 @@ pandas==2.3.3
 pillow==12.0.0
 pyparsing==3.3.1
 PyQt5==5.15.11
-PyQt5-Qt5==5.15.18
-PyQt5_sip==12.17.2
 python-dateutil==2.9.0.post0
 python-docx==1.2.0
 pytz==2025.2
@@ -19,3 +17,4 @@ six==1.17.0
 typing_extensions==4.15.0
 tzdata==2025.3
 windrose==1.9.2
+xlrd==2.0.2
